test/compile_errors/err_recovery_truncated_body.w
//! expect-error: expected

fn greet(name: str):
    let greeting = "hello"
    let

fn main:
    print("ok")
